audioecho: Fix handling of delay property in PLAYING/PAUSED state

https://bugzilla.gnome.org/show_bug.cgi?id=703901